Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,15 +1,15 @@
 ---
-title: Introduction to bankstmtconversion API
+title: Introduction to bankstmtconverter API
 ---
 
-# Getting start with bankstmtconversion API
+# Getting start with bankstmtconverter API
 
-Welcome to the bankstmtconversion API documentation! Here you will find everything you need to get started with integrating bankstmtconversion into your applications.
+Welcome to the bankstmtconverter API documentation! Here you will find everything you need to get started with integrating bankstmtconverter into your applications.
 
 ## API Keys
 
-- **Obtaining**: To access the API, you’ll need a valid API key. Retrieve it from the bankstmtconversion billing dashboard. If unavailable, please contact the admin.
-- **Authentication**: bankstmtconversion primarily authenticates using API keys.
+- **Obtaining**: To access the API, you’ll need a valid API key. Retrieve it from the bankstmtconverter billing dashboard. If unavailable, please contact the admin.
+- **Authentication**: bankstmtconverter primarily authenticates using API keys.
 - **Usage**: Always include your API key in the request header:
 
 ```json
