Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -8,9 +8,9 @@ Welcome to the bankstmtconverter API documentation! Here you will find everythin
 
 ## API Keys
 
-- **Obtaining**: To access the API, you’ll need a valid API key. Retrieve it from the bankstmtconverter billing dashboard. If unavailable, please contact the admin.
+- **Obtaining**: To access the API, you’ll need a valid `API key`. Retrieve it from the bankstmtconverter billing dashboard. If unavailable, please contact the admin.
 - **Authentication**: bankstmtconverter primarily authenticates using API keys.
-- **Usage**: Always include your API key in the request header:
+- **Usage**: Always include your `API key` in the request header:
 
 ```json
 'Authorization': 'Bearer <api_key>'
