Documentation edits made through Mintlify web editor

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -2,7 +2,7 @@
 title: Introduction to bankstmtconverter API
 ---
 
-# Getting start with bankstmtconverter API
+**Getting start with bankstmtconverter API**
 
 Welcome to the bankstmtconverter API documentation! Here you will find everything you need to get started with integrating bankstmtconverter into your applications.
 
