--- a/api-reference/bankstmt.mdx
+++ b/api-reference/bankstmt.mdx
@@ -1,10 +1,43 @@
 ---
-title: Bank Statement Converter
-description: Convert bank statements into structured data using our API.
+title: What is bankstmtconverter
+description: Get an overview of BankStmtConverter — a powerful tool to convert bank statements into editable formats quickly and accurately.
 ---
 
-# 🏦 Bank Statement Converter
+# 👋 Welcome to BankStmtConverter Documentation
 
-Easily convert PDF bank statements into clean, structured Excel/JSON formats using our API.
+**BankStmtConverter** is a powerful online tool that converts your bank statements into editable formats like **Excel**, **CSV**, or **Google Sheets** — quickly and accurately.
 
-👉 Check out the [API Reference](/api-reference/introduction) to integrate this feature into your application.
+---
+
+### 🚀 Why BankStmtConverter?
+
+Managing bank statements manually can be time-consuming and error-prone. Our **AI-powered platform** simplifies this process by automatically extracting table data from your **PDF** or **image** bank statements.
+
+---
+
+### 🎯 Key Benefits
+
+- ✅ Supports multiple output formats: **Excel**, **CSV**, **HTML**, **XML**, etc.
+- ✅ AI-based table detection for highly accurate data extraction
+- ✅ Lightning-fast processing with **GPU acceleration**
+- ✅ Secure handling of sensitive financial data
+- ✅ Download results in **Excel**, **CSV**, or **Google Sheets**
+
+---
+
+### 📊 Use Cases
+
+- 👨‍💼 Accountants and finance teams
+- 🧾 Small business owners managing expenses
+- 🏦 Individuals organizing personal finances
+- 👩‍💻 Developers integrating financial workflows via API
+
+---
+
+### 🌟 Get Started
+
+To get started, simply **upload your bank statement** and select the desired output format.
+
+For more advanced usage, explore our detailed **guides on features and API integrations**.
+
+🎉 **Happy converting!**
