google-sheets img

--- a/docs/integration/google-sheets.mdx
+++ b/docs/integration/google-sheets.mdx
@@ -14,7 +14,7 @@ Instead of doing this manually, **BankStatementConverter** lets you **automatica
 
 After creating your **Mailbox** you can bring parsed data into Google Sheets by copying the **special formula** (available on the **Integrations** page) and pasting it into any cell in your Sheet.  
 
-![webhook](/img/googlesheets.png)
+![webhook](docs/img/googlesheets.png)
 
 - Google Sheets will refresh the data automatically approximately **once every hour**.  
 - To update the data immediately, delete the formula from the cell and then use **Undo** — this will force a refresh.  
