changes in img google sheet mdx file

--- a/docs/integration/google-sheets.mdx
+++ b/docs/integration/google-sheets.mdx
@@ -14,7 +14,7 @@ Instead of doing this manually, **BankStatementConverter** lets you **automatica
 
 After creating your **Mailbox** you can bring parsed data into Google Sheets by copying the **special formula** (available on the **Integrations** page) and pasting it into any cell in your Sheet.  
 
-<img src="/img/googlesheets.png" alt="Google Sheets webhook" />
+![webhook](/images/googlesheets.png)
 
 - Google Sheets will refresh the data automatically approximately **once every hour**.  
 - To update the data immediately, delete the formula from the cell and then use **Undo** — this will force a refresh.  
@@ -51,29 +51,29 @@ Once the inbox and auto-forwarding rules are set, you can pull your parsed data 
 
    Open [Google Sheets](https://sheets.google.com) in your browser and either create a new spreadsheet or open an existing one.
 
-   ![googlesheet](/img/googlesheets.png)
+   ![googlesheet](/images/googlesheets.png)
 
 2. **Search and Select Your Document**
 
    Find the document you want to import data from and select it.
 
-   ![search](/img/docsearch.png)
+   ![search](/images/docsearch.png)
 
 3. **Generate the Document Formula** & **Copy your clipboard**
 
    A unique formula for the selected document will be automatically generated. Copy the generated formula to your clipboard.
 
-   ![copyformula](/img/copyformula.png)
+   ![copyformula](/images/copyformula.png)
 
 5. **Paste the Formula into Google Sheets**
 
   -  Go to your spreadsheet, select a cell, and paste the formula in any cell.
 
-      ![pasteformula](/img/formulapaste.png)
+      ![pasteformula](/images/formulapaste.png)
 
   - The data from your document will then populate the sheet automatically.
 
-      ![result](/img/result.png)
+      ![result](/images/result.png)
 
 
 >Follow the video for a step-by-step guide.
