--- a/docs/integration/google-sheets.mdx
+++ b/docs/integration/google-sheets.mdx
@@ -14,7 +14,12 @@ Instead of doing this manually, **BankStatementConverter** lets you **automatica
 
 After creating your **Mailbox** you can bring parsed data into Google Sheets by copying the **special formula** (available on the **Integrations** page) and pasting it into any cell in your Sheet.  
 
-![webhook](/images/googlesheets.png)
+<img
+  src="/images/googlesheets.png"
+  alt="googlesheets"
+  height="300"
+  className="rounded-lg"
+/>
 
 - Google Sheets will refresh the data automatically approximately **once every hour**.  
 - To update the data immediately, delete the formula from the cell and then use **Undo** — this will force a refresh.  
