Change img tag to image in mdx file

--- a/docs/api-key.mdx
+++ b/docs/api-key.mdx
@@ -18,4 +18,4 @@ BankStmtConverter provides an API to integrate seamless bank statement conversio
 ## Reference
 
 > Follow the screenshots below for a visual guide.
-![apikey](/img/APIkey.png)
+![apikey](/images/APIkey.png)
