--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -30,13 +30,13 @@ This page explains how to upload files.
 >Follow the screenshots below for a visual guide.  
 
 1. Click the **Select Files** button and choose your bank statement **file from your device**.
-![click select file button. Select file from your drive](/img/upload-file.png)
+![click select file button. Select file from your drive](/images/upload-file.png)
 
 2. Wait while the file is being **processed**.
-![processing the file](/img/processing.png)
+![processing the file](/images/processing.png)
 
 3. To cancel a file upload, use **Cancel All Uploads** before the upload reaches 100%.
-![cancel file upload](/img/cancelupload1.png)
+![cancel file upload](/images/cancelupload1.png)
 
 4. Go to **Statements** and download your bank statement in your preferred **output formats**.
-![download your desired output formats](/img/statement.png)
+![download your desired output formats](/images/statement.png)
