--- a/docs/how-to-use/upload-first-document.mdx
+++ b/docs/how-to-use/upload-first-document.mdx
@@ -26,7 +26,7 @@ Uploading your first document is simple and fast. Follow these steps:
 
 
 1. Click the **Select Files** button and choose your bank statement **file from your device**.
-![click select file button. Select file from your drive](/img/upload-file.png)
+![click select file button. Select file from your drive](/images/upload-file.png)
 
 2. Go to **Statements** and download your bank statement in your preferred **output formats**.
-![download your desired output formats](/img/statement.png)
+![download your desired output formats](/images/statement.png)
