--- a/docs/integration/webhooks.mdx
+++ b/docs/integration/webhooks.mdx
@@ -29,10 +29,10 @@ If you want to send your parsed data to your server, another app, or a platform 
 
 **Step 2:** In your [Bank Statement Converter](https://bankstmtconverter.com/) account, go to **Integrations → Webhooks**. 
 
-![webhook](/img/webhook1.png)
+![webhook](/images/webhook1.png)
 
 **Step 3:** Click on **“Create a webhook”**, select a trigger (typically **“Document parsed”**), and paste the destination URL.  
-![destinationurl](/img/webhookdestinationurl.png)
+![destinationurl](/images/webhookdestinationurl.png)
 
 From this point onward, BankStatementConverter will trigger the webhook every time the selected event occurs.  
 
@@ -163,21 +163,21 @@ Verifying this signature ensures that the request is genuine and truly sent from
 
 1. Enter the **Name** & **Destination URL** provided by the third-party app where you want to send data.
 
-![webhook](/img/webhook.png)
+![webhook](/images/webhook.png)
 
 2. Ensure the webhook is **active**. You may see a status indicator like "Active" or "Enabled".
 
-![webhooksigningkey](/img/webhooksigningkey.png)
+![webhooksigningkey](/images/webhooksigningkey.png)
 
 3. In the options menu, you can **Edit or Delete** your **Name and Destination URL**.
 
-![Editwebhook](/img/editwebhook.png)
-![Deletewebhook](/img/deletewebhook.png)
+![Editwebhook](/images/editwebhook.png)
+![Deletewebhook](/images/deletewebhook.png)
 
 
 4. Click Logs in the options menu to view your **Webhook Logs**.
 
-![logs](/img/logs.png)
+![logs](/images/logs.png)
 
 
 
