--- a/docs/mailbox.mdx
+++ b/docs/mailbox.mdx
@@ -104,16 +104,16 @@ Please read the following important information carefully.
 
 
 1. Your account gets a **unique email address**.  
-![Mailbox](/img/mailboxdashboard.png)
+![Mailbox](/images/mailboxdashboard.png)
 
 2. In the **To** field, paste your mailbox address **(copy it from Mailboxes)**.  
-![email template](/img/emailtemplate.png)
+![email template](/images/emailtemplate.png)
 
 3. Mail received from **Mailbox**  
-![email template](/img/mailreceived.png)
+![email template](/images/mailreceived.png)
 
 4. Once the email is received in the **Mailbox**, it is automatically passed to the **Statements**.  
-![statement](/img/statements.png)
+![statement](/images/statements.png)
 
 
 >Follow the Tutorial video for a step-by-step guide.
