--- a/docs/statement.mdx
+++ b/docs/statement.mdx
@@ -44,15 +44,15 @@ For each document, you can:
 
 1. The documents shows the document ID, file name, and status. You can use the action button to download the file in your desired format, like **Excel, CSV, or Merged Transactions**. 
 
-![homepage](/img/statement.png)
+ ![homepage](/images/statement.png)
 
 2. The statement shows the Manage and download your documents in your desired formats
 
-![statement](/img/statements.png)
+![statement](/images/statements.png)
 
 3. You will receive all file-related notifications. You can turn off notifications for all conversions if   you prefer
 
-![notification](/img/notify.png)
+![notification](/images/notify.png)
 
 
 >Follow the Tutorial video for a step-by-step guide.
