Change img tag to image in mdx file on security & integration

--- a/docs/integration/webhooks.mdx
+++ b/docs/integration/webhooks.mdx
@@ -125,7 +125,7 @@ Verifying this signature ensures that the request is genuine and truly sent from
 2. Compare your generated signature with the `Bankstatementconverter-signature` header sent with the webhook.
 3. If both signatures match, the request is authentic and safe to process.
 
-![signingsecretkey](/img/webhooksigningkey.png)
+![signingsecretkey](/images/webhooksigningkey.png)
 
 ⚠️ Note: A Signing Secret is valid for 30 minutes. After that, requests signed with the expired key will fail verification.
 
@@ -142,7 +142,7 @@ Verifying this signature ensures that the request is genuine and truly sent from
 ----
 # Webhook Event Fields
 
-![webhookworks](/img/webhookworks.png)
+![webhookworks](/images/webhookworks.png)
 
 | Field Name    | Value from your event              | Meaning                                                                                   |
 |---------------|------------------------------------|-------------------------------------------------------------------------------------------|
