--- a/docs/settings/billing-invoices.mdx
+++ b/docs/settings/billing-invoices.mdx
@@ -68,4 +68,4 @@ We support multiple payment methods for your convenience:
 
 
 1. Add your billing address to your **invoices and download your bills**
-![billing](/img/Billing.png)
+![billing](/images/Billing.png)
