--- a/docs/settings/notification.mdx
+++ b/docs/settings/notification.mdx
@@ -53,4 +53,4 @@ At BankStmtConverter, configuring notifications helps you stay informed about im
 >Follow the screenshot above for a visual guide.  
 
 1. 
-![webhook](/img/notification.png)
+![webhook](/images/notification.png)
