--- a/docs/settings/security.mdx
+++ b/docs/settings/security.mdx
@@ -46,6 +46,6 @@ This helps keep your account safe and secure.
 
 1. Open and upgrade your Password
 
-![UpdatePassword](/img/updatepassword.png)
+![UpdatePassword](/images/updatepassword.png)
 
 
