Navbar changes in mint.json

--- a/docs/auto-email-forwarding/gmail-forwarding.mdx
+++ b/docs/auto-email-forwarding/gmail-forwarding.mdx
@@ -43,7 +43,7 @@ For more details, see the [Official Gmail Help Page on Forwarding Emails](https:
 >Follow the screenshots and video for a step-by-step guide.
 
 
-![Automatically Forward Gmail Messages](/img/gmail-forwarding.png)
+![Automatically Forward Gmail Messages](/images/gmail-forwarding.png)
 
 
 <iframe width="560" height="315" 
